0.10.0 (currently working on)
- [#4428] Fix: Test failure in tx_seminars_EmailSalutation_testcase with latest oelib
- [#4333] Change: Use the new models in the countdown
- [#4425] Fix: EventHeadline needs to unset $this->mapper in __destruct
- [#4424] Fix: Make the seminars columns searchable in TYPO3 4.6
- [#3815] Fix: Throw more meaningful Exceptions
- [#4335] Change: Use the new models in the event headline
- [#4419] Feature: Add a view helper for rendering the date of an event
- [#4316] Fix: TCA: Fields with displayCond depend on inverted needs_registration (thanks to Philipp Kitzberger)
- [#4270] Cleanup: Add the parameter name to all @param
- [#4347] Fix: Fix missing/incorrect @return and return values
- [#4296] Fix: Fix all deprecation log warnings and version-specific unit test failures when running the unit tests on the current Core master
- [#3987] Change: Require TYPO3 4.4
- [#4326] Cleanup: Remove the Zend Studio metadata from all projects
- [#4189] Fix: Replace double quotes in subject-field of cancel/confirm-form
- [#3905] Fix: Exception in the FE editor the first time after clearing the cache
- [#4294] Fix: Adapt all version number checks for 4.6
- [#4286] Fix: pi1_eventEditor accesses a private variable isTestMode instead of calling the function
- [#4280] Cleanup: Make true, false and null uppercase
- [#4269] Cleanup: Convert the XCLASS code to use $GLOBALS
- [#4177] Cleanup: Update the copyright to 2011
- [#4268] Cleanup: Drop the XCLASS code from abstract classes
- [#4233] Fix: The default value for price_regular_early is missing a decimal (thanks to Eric Chavaillaz)
- [#3988] Fix: Field in the registration TCE forms has no label
- [#3951] Feature: Add a hook for sending the confirmation e-mail (from the BE module)
- [#4210] Feature: Modernize the modifySingleView hook
- [#4104] Feature: Add a hook for modifying the time frame list rows in the single view
- [#4199] Feature: Add a separate flavor for the single view