@@ -1,4 +1,5 @@
 0.10.0 (currently working on)
+- [#4426] Feature: Create a time range view helper
 - [#4428] Fix: Test failure in tx_seminars_EmailSalutation_testcase with latest oelib
 - [#4333] Change: Use the new models in the countdown
 - [#4425] Fix: EventHeadline needs to unset $this->mapper in __destruct
